# chemparseplot

./: .buildinfo  .gitignore  .lycheeignore  ARCHITECTURE.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  cog.toml  context7.json  contributing.html  features.html  genindex.html  index.html  installation.html  objects.inv  pixi.toml  prek.toml  py-modindex.html  pyproject.toml  quickstart.html  readme.md  readme.org  readme_src.org  search.html  searchindex.js  sitemap.xml  tbump.toml  used_by.html
.doctrees/: contributing.doctree  environment.pickle  features.doctree  index.doctree  installation.doctree  quickstart.doctree  used_by.doctree
.doctrees/__intersphinx_cache__/: pychum_objects.inv  rgpycrumbs_objects.inv
.doctrees/apidocs/: index.doctree
.doctrees/apidocs/chemparseplot/: chemparseplot.basetypes.doctree  chemparseplot.doctree  chemparseplot.parse.chemgp_hdf5.doctree  chemparseplot.parse.chemgp_jsonl.doctree  chemparseplot.parse.converter.doctree  chemparseplot.parse.doctree  chemparseplot.parse.eon.dimer_trajectory.doctree  chemparseplot.parse.eon.doctree  chemparseplot.parse.eon.gprd.doctree  chemparseplot.parse.eon.min_trajectory.doctree  chemparseplot.parse.eon.minimization.doctree  chemparseplot.parse.eon.neb.doctree  chemparseplot.parse.eon.saddle_search.doctree  chemparseplot.parse.file_.doctree  chemparseplot.parse.neb_utils.doctree  chemparseplot.parse.orca.doctree  chemparseplot.parse.orca.geomscan.doctree  chemparseplot.parse.orca.neb.doctree  chemparseplot.parse.orca.neb.interp.doctree  chemparseplot.parse.orca.neb.opi_parser.doctree  chemparseplot.parse.patterns.doctree  chemparseplot.parse.plumed.doctree  chemparseplot.parse.projection.doctree  chemparseplot.parse.trajectory.doctree  chemparseplot.parse.trajectory.hdf5.doctree  chemparseplot.parse.trajectory.neb.doctree  chemparseplot.plot._aids.doctree  chemparseplot.plot._surfaces.doctree  chemparseplot.plot.chemgp.doctree  chemparseplot.plot.doctree  chemparseplot.plot.geomscan.doctree  chemparseplot.plot.neb.doctree  chemparseplot.plot.optimization.doctree  (+8 more)
.doctrees/tutorials/: contribdoc.doctree  index.doctree
.doctrees/worklog/: graphTrials.doctree
.github/workflows/: build_docs.yml  build_test.yml  build_wheels.yml  ci_coverage.yml  ci_doc_commenter.yml  ci_doctest.yml  ci_prek.yml  ci_readme.yml  ci_tutorials.yml  python-publish.yml  release.yml
_modules/: index.html  logging.html
_modules/chemparseplot/: basetypes.html  util.html
_sources/: features.md.txt  index.rst.txt  quickstart.md.txt  used_by.md.txt
_sources/apidocs/: index.rst.txt
_sources/tutorials/: contribdoc.md.txt  index.md.txt
apidocs/: index.html
apidocs/chemparseplot/: chemparseplot.basetypes.html  chemparseplot.html  chemparseplot.parse.chemgp_hdf5.html  chemparseplot.parse.chemgp_jsonl.html  chemparseplot.parse.converter.html  chemparseplot.parse.eon.dimer_trajectory.html  chemparseplot.parse.eon.gprd.html  chemparseplot.parse.eon.html  chemparseplot.parse.eon.min_trajectory.html  chemparseplot.parse.eon.minimization.html  chemparseplot.parse.eon.neb.html  chemparseplot.parse.eon.saddle_search.html  chemparseplot.parse.file_.html  chemparseplot.parse.html  chemparseplot.parse.neb_utils.html  chemparseplot.parse.orca.geomscan.html  chemparseplot.parse.orca.html  chemparseplot.parse.orca.neb.html  chemparseplot.parse.orca.neb.interp.html  chemparseplot.parse.orca.neb.opi_parser.html  chemparseplot.parse.patterns.html  chemparseplot.parse.plumed.html  chemparseplot.parse.projection.html  chemparseplot.parse.trajectory.hdf5.html  chemparseplot.parse.trajectory.html  chemparseplot.parse.trajectory.neb.html  chemparseplot.plot._aids.html  chemparseplot.plot._surfaces.html  chemparseplot.plot.chemgp.html  chemparseplot.plot.geomscan.html  chemparseplot.plot.html  chemparseplot.plot.neb.html  chemparseplot.plot.optimization.html  chemparseplot.plot.plumed.html  chemparseplot.plot.structs.html  chemparseplot.plot.theme.html  chemparseplot.scripts.html  chemparseplot.scripts.plot_gp.html  chemparseplot.scripts.plt_neb.html  chemparseplot.units.html  (+1 more)
chemparseplot/: __init__.py  api.py  basetypes.py  units.py  util.py
chemparseplot/analyze/: dist.py  use_ira.py
chemparseplot/parse/: __init__.py  chemgp_hdf5.py  chemgp_jsonl.py  converter.py  file_.py  neb_utils.py  patterns.py  plumed.py  projection.py  types.py
chemparseplot/plot/: __init__.py  _aids.py  _jax_aids.py  _surfaces.py  chemgp.py  con.py  geomscan.py  neb.py  optimization.py  plumed.py  structs.py  theme.py
chemparseplot/scripts/: __init__.py  plot_gp.py  plt_neb.py
doc/source/: conf.py  features.md  index.rst  installation.md  quickstart.md
docs/orgmode/: index.org  release.org
scripts/: run_org_doctests.py
src/chemparseplot/: __about__.py
tests/: _optional_imports.py  conftest.py  fixtures_geomscan_snippet.txt  test_basetypes.py  test_coverage_batch.py  test_full_coverage.py  test_public_api.py
tests/fixtures/: orca_energy_coords_snippet.out
tests/parse/: _con_fixtures.py  test_chemgp_hdf5.py  test_chemgp_jsonl_types.py  test_con_io.py  test_converter.py  test_dimer_trajectory.py  test_eon_neb_types.py  test_eon_trajectory_common.py  test_frame_series.py  test_min_trajectory.py  test_minimization_result.py  test_neb_stitch.py  test_neb_utils.py  test_orca_public_api.py  test_parser_types.py  test_patterns.py  test_plumed.py  test_projection.py  test_readcon_boundary.py  test_saddle_results.py  test_sella_saddle.py  test_trajectory_hdf5.py  test_trajectory_neb.py
tests/plot/: test_chemgp_utils.py  test_con_plot.py  test_neb_helpers.py  test_neb_renderers.py  test_optimization.py  test_orca_neb_payload.py  test_projection_refactor.py  test_strip_rendering.py  test_structs_units.py  test_surface_auto_thin.py
tests/scripts/: test_plot_gp_cli.py  test_plt_neb_cli.py
tests/tutorials/: test_chemparseplot.py
tutorials/: contribdoc.html  index.html
tutorials/chemgp/: convergence.html  index.html  surfaces.html
tutorials/eon/: saddle.html
tutorials/orca/: geomscan.html
worklog/: graphTrials.html
(+186 files in other folders)
