[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build]
include = ["chemparseplot/**/*.py", "chemparseplot/*.py", "/tests"]


[project]
name = "chemparseplot"
description = "Parsers and plotting tools for computational chemistry"
readme = "readme.md"
keywords = ["compchem", "parser", "plot"]
license = { text = "MIT" }
authors = [{ name = "Rohit Goswami", email = "rog32@hi.is" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = ["numpy>=1.26.2", "pint>=0.22", "rgpycrumbs>=1.3.0"]

[project.optional-dependencies]
doc = [
  "mdit-py-plugins>=0.3.4",
  "myst-nb>=1",
  "myst-parser>=2",
  "sphinx>=7.2.6",
  "sphinx-autodoc2>=0.5",
  "sphinx-copybutton>=0.5.2",
  "sphinx-library>=1.1.2",
  "sphinx-sitemap>=2.5.1",
  "sphinx-togglebutton>=0.3.2",
  "sphinxcontrib-apidoc>=0.4",
]
plot = ["cmcrameri>=1.7", "matplotlib>=3.8.2"]
neb = ["ase>=3.22", "h5py>=3.0", "polars>=0.20"]
xyzrender = ["xyzrender>=0.1.2"]
all = ["chemparseplot[plot,neb,xyzrender]"]
test = ["pytest>=7.4.3", "pytest-cov>=4.1.0"]
lint = ["ruff>=0.1.6"]
[project.urls]
Documentation = "https://chemparseplot.rgoswami.me"
Issues = "https://github.com/HaoZeke/chemparseplot/issues"
Source = "https://github.com/HaoZeke/chemparseplot"
Changelog = "https://github.com/HaoZeke/chemparseplot/blob/main/CHANGELOG.md"

[tool.uv]
index-strategy = "first-index"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
# rgpycrumbs provided by parent pixi workspace as editable install

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = ["-ra", "-q"]
markers = [
  "pure: mark a test as needing only numpy",
  "neb: mark a test as needing numpy, polars, and ase",
]
minversion = "7.4"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 90
[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Implicitly concatenated string literals on one line
  "ISC001",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["chemparseplot"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"scripts/**/*" = [
  "PLC0415",
  "PLR2004",
  "S101",
  "S603",
  "T201",
] # doctest scripts
"tests/**/*" = [
  "E402",
  "F401",
  "ICN001",
  "PLR2004",
  "PLW2901",
  "S101",
  "T201",
  "TID252",
]
# __init__.py can import without use and use lazy __getattr__
"__init__.py" = ["F401", "PLC0415"]
# Plot modules use inline imports for optional deps, magic values for layout,
# boolean params for toggle switches, and loop var reassignment for type coercion
"chemparseplot/plot/chemgp.py" = [
  "E402",
  "F401",
  "PLC0415",
  "PLR2004",
  "FBT001",
  "FBT002",
  "PLW2901",
]
"chemparseplot/plot/neb.py" = ["PLR2004", "PLC0415", "C408"]
"chemparseplot/parse/orca/neb/opi_parser.py" = [
  "PLC0415", # late imports for optional deps (ase)
  "PLW0603", # global for lazy-loaded OPI module
  "N806",    # Output class reference
  "PLR2004", # magic value 2 in len check
  "ARG001",  # unused atoms_list kept for API compat
]
# Tutorial scripts use print and uppercase physics variables (X, Y, Z, NLL, etc.)
"doc/source/tutorials/**/*" = ["T201", "N806"]

[tool.coverage.run]
source_pkgs = ["chemparseplot"]
branch = true
parallel = true
omit = ["_version.py"]

[tool.coverage.paths]
chemparseplot = ["src/chemparseplot", "*/chemparseplot/src/chemparseplot"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.towncrier]
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
single_file = true
filename = "CHANGELOG.md"
directory = "doc/release/upcoming_changes/"
issue_format = "[#{issue}](https://github.com/HaoZeke/chemparseplot/issues/{issue})"
title_format = "## [{version}](https://github.com/HaoZeke/chemparseplot/tree/{version}) - {project_date}"
all_bullets = false

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
